styles/panels.css
.default-panel,
.instructions-panel,
.game-record,
.scores-record {
  width: 100%;
  display: flex;
  justify-content: center;
  position: relative;
}

.default-panel img,
.instructions-panel img,
.game-record img,
.scores-record img {
  width: 70%;
  height: 100%;
  margin-top: 20px;
  margin-bottom: 20px;
}

.instructions {
  font-size: 12px;
  position: absolute;
  width: 55%;
  height: 40%;
  top: 16%;
  left: 19%;
  overflow: auto;
}

.record-panel {
  color: white;
  font-weight: bold;
}

.record-titles {
  font-family: Brush Script, cursive;
  position: absolute;
  top: 9%;
}

.record-panel table {
  font-family: Brush Script, cursive;
  position: absolute;
  font-size: 20px;
  text-align: center;
  height: 60%;
}

#games-made {
  width: 30%;
  top: 27%;
  border-spacing: 0 15px;
}

#scores {
  top: 19%;
}

#scores td {
  padding: 0 70px;
}

#scores th {
  font-size: 25px;
  padding: 29px;
}

.record-btn {
  width: 10px;
  color: white;
  background: rgba(189, 141, 90, 0.4);
  position: absolute;
  top: 82%;
  left: 18%;
}

.record-btn:hover {
  background: rgba(189, 141, 90, 0.8);
}

.info-panel {
  width: 100%;
  height: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.info-panel .score,
.info-panel .info {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 12px;
}

.info-panel .score {
  width: 10%;
}

.info-panel .score img {
  width: 40px;
  height: 40px;
  margin-left: 5px;
  margin-right: 5px;
}

.info-panel .info {
  width: 50%;
  height: 50px;
  margin-left: 5px;
  margin-right: 5px;
  border-radius: 15px;
  background-color: rgba(230, 204, 178, 0.3);
  text-align: center;
}

@media (max-width: 1200px) {
  .default-panel img {
    width: 95%;
  }

  .instructions-panel img {
    width: 95%;
  }

  .record-panel img {
    width: 95%;
  }

  .info-panel .score {
    width: 10%;
  }
  .info-panel .info {
    width: 70%;
  }
}

